# minesweeper-io

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml  rust-toolchain.toml
.github/workflows/: fly.yml  rust.yml
frontend/: Cargo.toml  index.html
frontend/public/: style.css
frontend/src/: game.rs  lib.rs  main.rs
frontend/src/game/: cell.rs  client.rs  players.rs
game-manager/: Cargo.toml
game-manager/src/: game_manager.rs  lib.rs  messages.rs  models.rs  websocket.rs
game-ui/: Cargo.toml
game-ui/src/: background.rs  components.rs  dark_mode.rs  game.rs  icons.rs  info.rs  lib.rs  minesweeper.rs  mode.rs  players.rs  replay.rs  stats.rs  widgets.rs
migrations/: 0004_classic_mode_and_nicknames.sql  0005_player_awards.sql  0007_game_log.sql  0008_game_start_end.sql
minesweeper/: Cargo.toml
minesweeper-lib/: Cargo.toml
minesweeper-lib/example/: Cargo.toml  README.md
minesweeper-lib/example/src/: main.rs
minesweeper-lib/src/: analysis.rs  board.rs  cell.rs  client.rs  game.rs  lib.rs  main.rs  replay.rs  upair.rs
minesweeper-lib/src/replay/: analysis.rs
minesweeper/src/: board.rs  cell.rs  client.rs  game.rs  lib.rs  main.rs
native/: Cargo.toml
native/src-tauri/: Cargo.toml  tauri.conf.json
server/: Cargo.toml  chat.html
server/src/: game_manager.rs  lib.rs  main.rs
src/: board.rs  cell.rs  game.rs  lib.rs  main.rs
tauri/: Cargo.toml  index.html  styles.css
tauri/src/: app.rs  components.rs  game.rs  main.rs
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs
web/: Cargo.toml  README.md  input.scss  package-lock.json  package.json  tailwind.config.js
web-auth/: .gitignore  Cargo.toml
web-auth/src/: auth.rs  auth_client.rs  lib.rs  models.rs  users.rs
web/end2end/tests/: example.spec.ts
web/migrations/: 0001_game.sql  0001_users.sql  0002_game.sql  0003_guest_games.sql  0006_remove_classic.sql  0009_games_timed_out_seconds.sql
web/src/: app.rs  auth.rs  backend.rs  components.rs  error_template.rs  fileserv.rs  game.rs  lib.rs  main.rs  messages.rs  views.rs
web/src/app/: active.rs  auth.rs  background.rs  error_template.rs  footer.rs  game.rs  header.rs  home.rs  info.rs  login.rs  minesweeper.rs  profile.rs  root.rs
web/src/app/game/: cell.rs  client.rs  players.rs
web/src/app/minesweeper/: cell.rs  client.rs  entry.rs  game.rs  games.rs  players.rs  replay.rs  widgets.rs
web/src/app/profile/: display_name.rs  game_history.rs  stats.rs
web/src/backend/: _game_manager.rs  _handlers.rs  app.rs  auth.rs  cache.rs  fileserv.rs  game_manager.rs  handlers.rs  users.rs  websocket.rs
web/src/components/: button.rs  dark_mode.rs  icons.rs  info.rs  input.rs  socials.rs
web/src/game/: cell.rs  client.rs  players.rs
web/src/models/: game.rs  user.rs
web/src/views/: home.rs  login.rs  profile.rs
web/style/: dummy.css  game.scss  main.scss  output.scss
