[workspace]
resolver = "2"
members = [
  # core
  "web",

  # integrations

  # libraries
  "minesweeper",
]
exclude = []

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
minesweeper = { path = "./minesweeper", version = "0.1.0" }
minesweeper-web = { path = "./web", version = "0.1.0" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
