[workspace]
resolver = "2"
members = [
  # core
  "web",

  # integrations

  # libraries
  "minesweeper-lib",
]
exclude = ["minesweeper-lib/example"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
minesweeper-lib = { path = "./minesweeper-lib", version = "0.1.0" }
minesweeper-web = { path = "./web", version = "0.1.0" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
