[workspace]
resolver = "2"
members = [
  # core
  "web",

  # integrations

  # libraries
  "minesweeper-lib",
  "game-manager",
  "game-ui",
  "web-auth",
]
exclude = ["minesweeper-lib/example"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
minesweeper-lib = { path = "./minesweeper-lib", version = "0.1.0" }
minesweeper-web = { path = "./web", version = "0.1.0" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[patch.crates-io]
#  Main has fixes for MacOS SIMD
pathfinder_simd = { git = "https://github.com/theoparis/pathfinder.git", ref = "1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb" }
