[package]
name = "frontend"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
leptos = { version = "0.4.6", features = ["csr", "nightly"] }
leptos-use = "0.6.0"
leptos_router = { version = "0.4.8", features = ["csr", "nightly"] }
minesweeper = { path="../minesweeper" }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
web-sys = { version = "0.3.64", features = ["WebSocket"] }
