[package]
name = "game-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
minesweeper-lib = { path="../minesweeper-lib" }
web-auth = { path="../web-auth" }
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "macros"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
cfg-if = "1.0"
futures = { version = "0.3", optional = true }
http = { version = "1.1" }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "time", "chrono", "runtime-tokio"], optional = true }
thiserror = "1.0"
time = "0.3"
tokio = { version = "1", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[features]
ssr = [
    "dep:axum",
    "dep:futures",
    "dep:sqlx",
    "dep:tokio",
    "web-auth/ssr"
]
