[package]
name = "game-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
minesweeper-lib = { path="../minesweeper-lib" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
codee = { version = "0.3", features = ["json_serde_wasm"] }
cfg-if = "1.0"
leptos = { version = "0.8.0", features = ["nightly"] }
leptos-use = { version = "0.16.0", features = ["storage", "use_document", "use_event_listener", "use_color_mode"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "=0.2.100"
web-sys = { version = "0.3", features = ["WebSocket", "Performance"] }
getrandom = { version = "0.2", features = ["js"] }
plotters = "0.3.7"
plotters-canvas = "0.3.0"
