[package]
package = "2"
name = "server"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minesweeper = { path = "../minesweeper" }
axum = { version = "0.6.19", features = ["ws", "macros"] }
futures = "0.3.28"
serde = "1.0.180"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.72"
serde_json = "1.0.104"
nanoid = "0.4.0"
