[package]
name = "tauri-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.0", features = ["csr", "nightly"] }
leptos-use = { version = "0.16.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
minesweeper-lib = { path = "../minesweeper-lib" }
game-ui = { path = "../game-ui" }
anyhow = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
console_log = "1.0"
